// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SummaryBaseCard Header should render component 1`] = `
<div>
  <h3
    class="font-weight-bold mb-2"
  >
    My Header
  </h3>
</div>
`;

exports[`SummaryBaseCard Header should render component with Description 1`] = `
<div>
  My Description
</div>
`;
